@@ -1,4 +1,5 @@
 Version 1.0.3-CVS (?? ??? 2005)
+  - Patch 1279537: Don't display confidential events in upcoming.php
   - Fixed bug 1406428: Bug in endhour
   - Fixed bug 1438181: DBI Interbase-Firebird connection call has
     wrong parameters
